<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">


    <ImageView
        android:background="@drawable/change2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/change1"
        android:screenReaderFocusable="true"
        android:nextFocusLeft="@drawable/change"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="20dp"

        tools:targetApi="p"
        android:layout_marginStart="310dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/change"
        android:layout_marginLeft="331dp"
        android:layout_marginTop="23dp"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wifi"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="13dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signal"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="15dp"


        />



    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="9:41"
        android:textStyle="bold"
        android:textColor="#FFFBFB"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"

        />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background"
        android:layout_marginTop="50dp"

        android:layout_marginLeft="5dp"
        android:layout_width="350dp"
        android:layout_height="250dp">

        <Button
            android:background="@drawable/krug"
            android:id="@+id/category"
            android:layout_width="64dp"
            android:layout_height="20dp"

            android:textColor="#FBF9F9"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="140dp"
            android:text="@string/category"
            android:textAppearance="@style/category"
            android:gravity="center_horizontal|center_vertical"

            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"/>



        <TextView
            android:id="@+id/explore_the"
            android:layout_width="220dp"
            android:layout_height="45.27dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"

            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:text="Explore the nightlife of your city"
            android:textAppearance="@style/explore_the"
            android:lineSpacingExtra="4sp"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"

            android:layout_alignParentStart="true"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/vector_stro"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginTop="11dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="305dp"
            android:background="@drawable/heart"
            android:layout_marginStart="305dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Free"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_128176"
            android:textStyle="bold"
            android:layout_marginTop="215dp"
            android:layout_marginLeft="33dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"


            />

        <ImageView
            android:background="@drawable/circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="135dp"
            android:scrollX="-5dp"
            android:layout_marginTop="188dp"
            android:src="@drawable/ic_group_black_24dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:background="@drawable/circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="100dp"

            android:layout_marginTop="188dp"
            android:src="@drawable/person"
            android:scrollY="-5dp"
            android:scrollX="-5dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:background="@drawable/circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="170dp"

            android:layout_marginTop="188dp"
            android:src="@drawable/groupv"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <ImageView
            android:background="@drawable/circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="203dp"

            android:layout_marginTop="188dp"
            android:src="@drawable/groupvv"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="203dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/participants"

            android:layout_marginTop="220dp"
            android:layout_marginLeft="106dp"
            android:layout_marginStart="106dp" />



        <androidx.appcompat.widget.Toolbar


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="90dp"
            android:layout_height="10dp"
            android:layout_marginTop="205dp"
            android:layout_marginLeft="250dp"

            android:background="@drawable/bar"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/accessibility"

            android:layout_marginTop="220dp"
            android:layout_marginLeft="260dp"
            android:layout_marginStart="260dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="335dp"
        android:layout_marginLeft="2dp"

        android:background="@drawable/krug2"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="405dp"
        android:text="@string/category"
        android:textColor="#FFFFFF"
        android:textStyle="italic"

        />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/shadow"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="20dp"
        android:drawableRight="@drawable/strelka"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:text="@string/type"
        android:contextClickable="true"
        android:layout_marginStart="20dp"
        android:drawableEnd="@drawable/strelka" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="410dp"
        android:text="Price"
        android:textColor="#FFFFFF"


        />

    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="430dp"
        android:layout_marginLeft="180dp"

        app:count="10"
        app:movable="true"
        app:start="4"
        app:end="8"
        />


    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="510dp"
        android:text="Accessibility"
        android:textColor="#FFFFFF"


        />

    <me.bendik.simplerangeview.SimpleRangeView
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="530dp"
        android:layout_marginLeft="180dp"

        app:count="10"
        app:movable="true"
        app:start="4"
        app:end="8"
        />




</RelativeLayout>
